# an-encryption-library

./: BUILDING.md  CMakeLists.txt  Dockerfile  NEWS.md  NOTICE  README.md  _config.yml  build.sh
.changes/: 0.1.1.md
include/an-encryption-library/: encrypt_decrypt.h
src/: encrypt_decrypt.c
tests/: CMakeLists.txt
tests/src/: test_encrypt_decrypt.c
